--- a/mistypes/templates/mistypes/mistype-form.html
+++ b/mistypes/templates/mistypes/mistype-form.html
@@ -2,17 +2,22 @@
 <div id="mistype-div">
     <div id="mistype-div-inner">
         <img src="{% static 'mistypes/images/mistypes.png' %}">
-        <div id="mistype-title">Ошибка в тексте:</div>
+        <div id="mistype-title">
+            {% trans "Mistype in text:" %}
+        </div>
         <div class="mistype-text">
             <span id="mistype-before"></span><span id="mistype-mistype"></span><span id="mistype-after"></span>
         </div>
         <div class="mistype-text">
-            Послать сообщение об ошибке автору?
+            {% trans "Send message about mistype to author?" %}
         </div>
-        <form id="mistype-form" action="{% url 'mistypes:mistypes_submit' %}" method="POST">
+        <form id="mistype-form" action="{% url 'mistypes:mistypes_submit' %}" method="POST"
+              data-success="{% trans 'Thank you for finding mistype!' %}"
+              data-error="{% trans 'Something get wrong. Please try again or contact with administrator.' %}"
+              data-toomuchtext="{% trans 'Too much text selected.' %}">
             {% csrf_token %}
             <label for="id_comment">
-                Комментарий для автора (необязательно, но очень приветствуется, это позволит быстрее исправить ошибку):
+                {% trans "Comment for author:" %}
             </label>
             <input id="id_comment" maxlength="200" name="comment" type="text">
             <input id="id_url" maxlength="300" name="url" type="hidden">
@@ -20,8 +25,8 @@
             <input id="id_mistype" maxlength="100" name="mistype" type="hidden">
             <input id="id_after" maxlength="50" name="after" type="hidden">
             <div class="center">
-                <input type="submit" id="id_submit" value="Отправить">&nbsp;
-                <input type="button" id="id_cancel" value="Отмена">
+                <input type="submit" id="id_submit" value="{% trans 'Send' %}">&nbsp;
+                <input type="button" id="id_cancel" value="{% trans 'Cancel' %}">
             </div>
         </form>
     </div>
