Load i18n to templates

--- a/mistypes/templates/mistypes/mistype-email.html
+++ b/mistypes/templates/mistypes/mistype-email.html
@@ -1,4 +1,4 @@
-
+{% load i18n %}
 <p>{% blocktrans %}User with IP-address {{ ip }} has found a mistype on site.{% endblocktrans %}</p>
 <p>{% blocktrans %}URL:{% endblocktrans %} <a href="{{ url }}">{{ url }}</a></p>
 <p>{% blocktrans %}Mistype text:{% endblocktrans %}</p>
