--- a/mistypes/templates/mistypes/mistype-form.html
+++ b/mistypes/templates/mistypes/mistype-form.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load staticfiles i18n %}
 <div id="mistype-div">
     <div id="mistype-div-inner">
         <img src="{% static 'mistypes/images/mistypes.png' %}">
